Fixed scrolling on mobile

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,7 +8,7 @@
 html, body {
     margin: 0;
     height: 100%;
-    overflow: hidden
+    overflow-x: hidden
 }
 
 /* Sticky footer styles
